--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -331,6 +331,10 @@ h4.sb_info + hr + form {
   background-color: transparent !important;
 }
 
+#sidebar td:first-child, #sb_localtunnels td:nth-child(2) {text-align: left}
+#sidebar td:last-child {text-align: right}
+#sidebar #sb_internals td, #sidebar #sb_advanced td, #sidebar #sb_services td {text-align: center}
+
 #sb_localtunnels td {
   vertical-align: middle;
   line-height: 1;
